feat: implement ADRScope v0.1.0 - ADR visualization tool
Complete implementation of ADRScope, a lightweight visualization tool
for Architecture Decision Records (ADRs).

Features:
- Self-contained HTML viewer with faceted search and filtering
- Interactive relationship graph visualization
- GitHub Wiki page generation
- ADR validation with configurable rules
- Statistics and analytics for ADR collections
- Multiple theme support (light, dark, system)
- Lenient YAML frontmatter parsing

Architecture:
- Clean Architecture with domain/application/infrastructure layers
- Trait-based filesystem abstraction for testability
- Extensible validation rule pattern
- Compile-time HTML templates with Askama

Security:
- Unsafe code forbidden via #![forbid(unsafe_code)]
- Supply chain security with cargo-deny
- All errors handled explicitly (no panics)

Documentation:
- 8 Architecture Decision Records
- Comprehensive README with screenshots
- Keep a Changelog format

Testing:
- 180+ tests with 95%+ coverage
- Property-based testing with proptest
- In-memory filesystem for fast unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,10 @@ junit.xml
 
 # Project specific
 *.local
+
+# Generated ADR viewer output
+adr.html
+adr-viewer.html
+
+# Local plugin configuration (user-specific)
+.claude/*.local.md
