--- a/clippy.toml
+++ b/clippy.toml
@@ -4,8 +4,8 @@
 # Maximum cognitive complexity for functions
 cognitive-complexity-threshold = 25
 
-# Maximum allowed nesting depth
-max-nesting-depth = 4
+# Maximum allowed nesting depth (slightly elevated for iterators with closures)
+excessive-nesting-threshold = 6
 
 # Maximum number of lines in a function
 too-many-lines-threshold = 100
@@ -32,7 +32,7 @@ allow-unwrap-in-tests = true
 allow-print-in-tests = true
 
 # MSRV for lint behavior
-msrv = "1.80"
+msrv = "1.85"
 
 # Type complexity threshold
 type-complexity-threshold = 250
