fix(action): use unique owner names for problem matchers
GitHub Actions requires unique owner names for each problem matcher.
Split 'adrscope' into 'adrscope-error' and 'adrscope-warning' to avoid
the 'Duplicate owner name' error when registering the matchers.

--- a/action.yml
+++ b/action.yml
@@ -263,4 +263,5 @@ runs:
       if: always()
       shell: bash
       run: |
-        echo "::remove-matcher owner=adrscope::"
+        echo "::remove-matcher owner=adrscope-error::"
+        echo "::remove-matcher owner=adrscope-warning::"
