fix(action): use 'auto' theme instead of 'system'
The adrscope CLI uses 'auto' for automatic theme detection, not 'system'.
Update action default and documentation to match CLI behavior.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -48,7 +48,7 @@ jobs:
           command: generate
           input-dir: docs/decisions
           output: adr-viewer.html
-          theme: system
+          theme: auto
 
       - name: Determine version
         id: version
