fix(action): fix grep -c error count parsing
When grep -c finds no matches, it outputs '0' but exits with code 1.
The previous || echo '0' caused duplicate output. Use proper variable
assignment with fallback to handle this case.

--- a/action.yml
+++ b/action.yml
@@ -237,9 +237,9 @@ runs:
         adrscope "${ARGS[@]}" 2>&1 | tee "$OUTPUT_FILE"
         EXIT_CODE=${PIPESTATUS[0]}
 
-        # Parse output for counts
-        ERROR_COUNT=$(grep -c "^ERROR:" "$OUTPUT_FILE" 2>/dev/null || echo "0")
-        WARNING_COUNT=$(grep -c "^WARNING:" "$OUTPUT_FILE" 2>/dev/null || echo "0")
+        # Parse output for counts (grep -c returns 1 if no matches, handle that)
+        ERROR_COUNT=$(grep -c "^ERROR:" "$OUTPUT_FILE" 2>/dev/null) || ERROR_COUNT=0
+        WARNING_COUNT=$(grep -c "^WARNING:" "$OUTPUT_FILE" 2>/dev/null) || WARNING_COUNT=0
 
         # Set outputs
         if [ $EXIT_CODE -eq 0 ]; then
